--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
 
     <color name="black">#000000</color>
 
+    <color name="background"> #EFEFEF </color>
+    <color name="app_theme">  #2ABBAA  </color>
+    <color name="goods_text_color">#333333</color>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
