--- a/app/src/main/res/drawable/rb_main_selector_2.xml
+++ b/app/src/main/res/drawable/rb_main_selector_2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/ic_action028" android:state_checked="false"/>
-    <item android:drawable="@mipmap/ic_action034" android:state_checked="true"/>
+    <item android:drawable="@drawable/discover" android:state_checked="false"/>
+    <item android:drawable="@drawable/discover2" android:state_checked="true"/>
 </selector>
