--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,133 +1,229 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:myradio="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
     tools:context=".ui.MainActivity">
 
     <FrameLayout
         android:id="@+id/lay_frg_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:paddingBottom="48dp"
-        >
-    </FrameLayout>
+        android:paddingBottom="48dp"></FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_40"
         android:layout_alignParentBottom="true"
-        >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@android:color/white"
-        android:orientation="vertical">
+        android:clipChildren="false">
 
-        <include layout="@layout/lay_divider_line"></include>
-
-        <RadioGroup
-            android:id="@+id/rg_main_check"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="@dimen/dp_40"
             android:layout_gravity="bottom"
+            android:background="@android:color/white"
             android:orientation="horizontal">
 
-            <com.zthx.npj.view.TabRadioButton
-                android:id="@+id/rb_main_check_01"
-                style="@style/Font13_666"
+            <include layout="@layout/lay_divider_line"></include>
+
+
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:button="@null"
-                android:drawablePadding="3dp"
-                android:gravity="center"
-                android:paddingBottom="1dp"
-                android:paddingTop="5dp"
-                android:text="消息"
-                android:textColor="@drawable/rb_main_selector_color"
-                myradio:drawableHighSize="20dp"
-                myradio:drawableTop="@drawable/rb_main_selector_1"
-                myradio:drawableWideSize="20dp"
-                />
+                android:gravity="bottom|center_horizontal">
 
-            <com.zthx.npj.view.TabRadioButton
-                android:id="@+id/rb_main_check_02"
-                style="@style/Font13_666"
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@mipmap/ic_launcher" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:button="@null"
-                android:drawablePadding="3dp"
-                android:gravity="center"
-                android:paddingBottom="1dp"
-                android:paddingTop="5dp"
-                android:text="发现"
-                android:textColor="@drawable/rb_main_selector_color"
-                myradio:drawableHighSize="20dp"
-                myradio:drawableTop="@drawable/rb_main_selector_2"
-                myradio:drawableWideSize="20dp"/>
+                android:gravity="bottom|center_horizontal">
 
-            <com.zthx.npj.view.TabRadioButton
-                android:id="@+id/rb_main_check_03"
-                style="@style/Font13_666"
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@mipmap/ic_launcher" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:button="@null"
-                android:drawablePadding="3dp"
-                android:gravity="center"
-                android:paddingBottom="1dp"
-                android:paddingTop="5dp"
-                android:text="庄园"
-                android:textColor="@drawable/rb_main_selector_color"
-                myradio:drawableHighSize="20dp"
-                myradio:drawableTop="@drawable/rb_main_selector_1"
-                myradio:drawableWideSize="20dp"
-                />
+                android:gravity="bottom|center_horizontal">
 
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@mipmap/ic_launcher" />
+            </LinearLayout>
 
-            <com.zthx.npj.view.TabRadioButton
-                android:id="@+id/rb_main_check_04"
-                style="@style/Font13_666"
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:button="@null"
-                android:drawablePadding="3dp"
-                android:gravity="center"
-                android:paddingBottom="1dp"
-                android:paddingTop="5dp"
-                android:text="购物车"
-                android:textColor="@drawable/rb_main_selector_color"
-                myradio:drawableHighSize="20dp"
-                myradio:drawableTop="@drawable/rb_main_selector_3"
-                myradio:drawableWideSize="20dp"/>
+                android:gravity="bottom|center_horizontal">
 
-            <com.zthx.npj.view.TabRadioButton
-                android:id="@+id/rb_main_check_05"
-                style="@style/Font13_666"
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@mipmap/ic_launcher" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:button="@null"
-                android:drawablePadding="3dp"
-                android:gravity="center"
-                android:paddingBottom="1dp"
-                android:paddingTop="5dp"
-                android:text="我的"
-                android:textColor="@drawable/rb_main_selector_color"
-                myradio:drawableHighSize="20dp"
-                myradio:drawableTop="@drawable/rb_main_selector_4"
-                myradio:drawableWideSize="20dp"/>
+                android:gravity="bottom|center_horizontal">
 
-        </RadioGroup>
-    </LinearLayout>
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@mipmap/ic_launcher" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lin"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50"
+            android:layout_alignParentBottom="true"
+            android:background="#fff"
+            android:elevation="10dp"
+            android:gravity="bottom"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/ll_main_check_01"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:src="@drawable/home" />
+
+                <TextView
+                    android:id="@+id/tv_home_home"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingBottom="2dp"
+                    android:text="首页"
+                    android:textSize="@dimen/sp_10"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_main_check_02"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_22"
+                    android:layout_height="@dimen/dp_22"
+                    android:src="@drawable/rb_main_selector_2" />
+
+                <TextView
+                    android:id="@+id/tv_home_discover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingBottom="2dp"
+                    android:text="发现"
+                    android:textSize="@dimen/sp_10"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_main_check_03"
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_40"
+                    android:layout_height="@dimen/dp_40"
+                    android:src="@drawable/game"
+                    android:layout_marginTop="@dimen/dp_14"/>
+
+                <TextView
+                    android:id="@+id/tv_home_game"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingBottom="2dp"
+                    android:textSize="@dimen/sp_10"
+                    android:text="庄园" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_main_check_04"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_22"
+                    android:layout_height="@dimen/dp_22"
+                    android:src="@drawable/rb_main_selector_3" />
+
+                <TextView
+                    android:id="@+id/tv_home_shoppingCart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingBottom="2dp"
+                    android:text="购物车"
+                    android:textSize="@dimen/sp_10"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_main_check_05"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_21"
+                    android:layout_height="@dimen/dp_22"
+                    android:src="@drawable/rb_main_selector_4" />
+                <TextView
+                    android:id="@+id/tv_home_mine"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingBottom="2dp"
+                    android:textSize="@dimen/sp_10"
+                    android:text="我的" />
+            </LinearLayout>
+        </LinearLayout>
+
     </FrameLayout>
 
 </RelativeLayout>
