--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,51 +4,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragment.HomeFragment">
+    tools:context=".ui.fragment.HomeFragment"
+    android:background="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_50"
         android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:paddingLeft="@dimen/dp_10"
         android:background="@android:color/background_dark">
         <ImageView
             android:id="@+id/fg_home_iv_scan"
-            android:layout_width="@dimen/dp_40"
-            android:layout_height="@dimen/dp_40"
-            android:src="@mipmap/ic_launcher"
+            android:layout_width="@dimen/dp_22"
+            android:layout_height="@dimen/dp_22"
+            android:src="@drawable/home_scan"
             android:layout_marginLeft="@dimen/dp_10"/>
 
         <RelativeLayout
-            android:layout_width="@dimen/dp_200"
-            android:layout_height="@dimen/dp_40"
+            android:layout_width="@dimen/dp_246"
+            android:layout_height="@dimen/dp_29"
             android:layout_marginLeft="@dimen/dp_10"
-            android:background="@drawable/white_conner">
+            android:background="@drawable/white_conner"
+            android:alpha="0.5">
             <ImageView
-                android:layout_width="@dimen/dp_30"
-                android:layout_height="@dimen/dp_30"
+                android:layout_width="@dimen/dp_22"
+                android:layout_height="@dimen/dp_22"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:src="@drawable/home_search"/>
             <EditText
                 android:id="@+id/fg_home_et_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@null"
+                android:hint="请输入您想要的内容"
+                android:textSize="@dimen/sp_15"
                 android:layout_marginLeft="@dimen/dp_50"/>
         </RelativeLayout>
 
         <ImageView
             android:id="@+id/fg_home_iv_classify"
-            android:layout_width="@dimen/dp_40"
-            android:layout_height="@dimen/dp_40"
-            android:src="@mipmap/ic_launcher"
+            android:layout_width="@dimen/dp_22"
+            android:layout_height="@dimen/dp_22"
+            android:src="@drawable/home_kind"
             android:layout_marginLeft="@dimen/dp_10"/>
         <ImageView
             android:id="@+id/fg_home_iv_message"
-            android:layout_width="@dimen/dp_40"
-            android:layout_height="@dimen/dp_40"
-            android:src="@mipmap/ic_launcher"
+            android:layout_width="@dimen/dp_22"
+            android:layout_height="@dimen/dp_22"
+            android:src="@drawable/home_message"
             android:layout_marginLeft="@dimen/dp_10"/>
     </LinearLayout>
 
@@ -63,12 +68,14 @@
             <com.youth.banner.Banner
                 android:id="@+id/banner"
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="@dimen/dp_188" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_70"
-                android:layout_margin="@dimen/dp_20"
+                android:layout_width="@dimen/dp_351"
+                android:layout_height="@dimen/dp_68"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_10"
                 android:background="@drawable/white_conner"
                 android:padding="@dimen/dp_5">
                 <LinearLayout
@@ -76,17 +83,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="vertical">
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/dp_45"
+                        android:layout_height="@dimen/dp_45"
                         android:layout_weight="1"
-                        android:src="@mipmap/ic_launcher"/>
+                        android:src="@drawable/home_seckill"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/SecKill"
-                        android:layout_gravity="center_horizontal"/>
+                        android:textSize="@dimen/sp_12"
+                        android:layout_marginTop="@dimen/dp_4"
+                        android:layout_gravity="center"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -94,16 +104,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="vertical">
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/dp_45"
+                        android:layout_height="@dimen/dp_45"
                         android:layout_weight="1"
-                        android:src="@mipmap/ic_launcher"/>
+                        android:src="@drawable/home_presell"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/presell"
+                        android:textSize="@dimen/sp_12"
+                        android:layout_marginTop="@dimen/dp_4"
                         android:layout_gravity="center_horizontal"/>
                 </LinearLayout>
                 <LinearLayout
@@ -111,16 +124,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="vertical">
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/dp_45"
+                        android:layout_height="@dimen/dp_45"
                         android:layout_weight="1"
-                        android:src="@mipmap/ic_launcher"/>
+                        android:src="@drawable/home_local"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/local_seller"
+                        android:textSize="@dimen/sp_12"
+                        android:layout_marginTop="@dimen/dp_4"
                         android:layout_gravity="center_horizontal"/>
                 </LinearLayout>
                 <LinearLayout
@@ -128,25 +144,31 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="vertical">
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/dp_45"
+                        android:layout_height="@dimen/dp_45"
                         android:layout_weight="1"
-                        android:src="@mipmap/ic_launcher"/>
+                        android:src="@drawable/home_gift"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/gift_mall"
+                        android:textSize="@dimen/sp_12"
+                        android:layout_marginTop="@dimen/dp_4"
                         android:layout_gravity="center_horizontal"/>
                 </LinearLayout>
             </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/fg_home_rl_go_game"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_60"
-                android:background="@mipmap/ic_launcher">
+                android:layout_width="@dimen/dp_351"
+                android:layout_height="@dimen/dp_120"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_10"
+                android:background="@drawable/home_go_game">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -155,10 +177,6 @@
                     android:layout_alignParentRight="true"
                     android:layout_margin="@dimen/dp_5"
                     android:background="@drawable/white_conner">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/go_to_game" />
                 </LinearLayout>
 
 
@@ -170,38 +188,39 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="@dimen/dp_20"
-                android:padding="@dimen/dp_15"
-                android:background="@drawable/white_conner">
+                android:gravity="center"
+                android:background="@color/background">
 
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@mipmap/ic_launcher"
-                    android:layout_marginLeft="@dimen/dp_100"/>
+                    android:layout_width="@dimen/dp_22"
+                    android:layout_height="@dimen/dp_22"
+                    android:src="@drawable/home_good_goods"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/jingpintuijian"
-                    android:layout_marginLeft="@dimen/dp_10"/>
+                    android:textSize="@dimen/sp_16"
+                    android:layout_marginLeft="@dimen/dp_7"/>
 
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@mipmap/ic_launcher"
-                    android:layout_marginLeft="@dimen/dp_10"/>
+                    android:layout_width="@dimen/dp_22"
+                    android:layout_height="@dimen/dp_22"
+                    android:src="@drawable/home_good_goods"
+                    android:layout_marginLeft="@dimen/dp_7"/>
 
             </LinearLayout>
 
             <!--<com.scwang.smartrefresh.layout.SmartRefreshLayout-->
-                android:id="@+id/fg_home_refresh"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                <!--android:id="@+id/fg_home_refresh"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/fg_home_shopping_cast"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/dp_9"/>
 
             <!--</com.scwang.smartrefresh.layout.SmartRefreshLayout>-->
         </LinearLayout>
