--- a/app/src/main/res/layout/item_home_goods.xml
+++ b/app/src/main/res/layout/item_home_goods.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_250"
+    android:layout_width="@dimen/dp_170"
+    android:layout_height="@dimen/dp_257"
     android:orientation="vertical"
-    android:padding="@dimen/dp_10">
+    android:paddingTop="@dimen/dp_21">
 
     <ImageView
         android:id="@+id/item_iv_home_goods"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_120"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:layout_marginRight="@dimen/dp_4"
+        android:layout_height="@dimen/dp_170"
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
@@ -17,35 +19,42 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/go_to_game"
-        android:layout_marginTop="@dimen/dp_10"
-        android:textSize="@dimen/sp_17"/>
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginLeft="@dimen/dp_5"
+        android:textColor="@color/goods_text_color"
+        android:textSize="@dimen/sp_15"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_5">
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginLeft="@dimen/dp_5">
 
         <TextView
             android:id="@+id/item_tv_home_goods_new_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/go_to_game"
-            android:textSize="@dimen/sp_17" />
+            android:text="￥188"
+            android:textSize="@dimen/sp_14"
+            android:textColor="@color/app_theme"/>
 
         <TextView
             android:id="@+id/item_tv_home_goods_old_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_17"
-            android:layout_alignParentRight="true"
-            android:text="@string/go_to_game"/>
+            android:textSize="@dimen/sp_14"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:text="￥200"/>
 
-    </RelativeLayout>
-    <LinearLayout
+    </LinearLayout>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_15"
         android:orientation="horizontal"
-        android:layout_marginTop="@dimen/dp_10">
+        android:layout_marginTop="@dimen/dp_4"
+        android:background="#d4f1ee"
+        android:layout_marginLeft="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_5">
 
         <ImageView
             android:id="@+id/item_iv_home_goods_mall"
@@ -57,8 +66,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/go_to_game"
-            android:layout_marginLeft="@dimen/dp_10"/>
-    </LinearLayout>
+            android:textSize="@dimen/sp_12"
+            android:textColor="@color/app_theme"
+            android:layout_marginLeft="@dimen/dp_26"/>
+        
+        <ImageView
+            android:layout_width="@dimen/dp_17"
+            android:layout_height="@dimen/dp_4"
+            android:src="@drawable/item_goods_more"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp_5"/>
+    </RelativeLayout>
 
 
 </LinearLayout>
