--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -1,17 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.ShoppingCartFragment">
+    android:background="@color/background"
+    android:orientation="vertical"
+    tools:context=".ui.fragment.MineFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_50"
+        android:background="@color/app_theme">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="购物车"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_18" />
+
+        <ImageView
+            android:id="@+id/fg_shopping_iv_message"
+            android:layout_width="@dimen/dp_22"
+            android:layout_height="@dimen/dp_22"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp_10"
+            android:src="@drawable/shopping_message" />
+
+        <TextView
+            android:id="@+id/fg_shopping_tv_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp_15"
+            android:layout_toLeftOf="@id/fg_shopping_iv_message"
+            android:text="编辑"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_15" />
+    </RelativeLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="shopping"
-        android:textColor="@android:color/black"
-        android:gravity="center"
-        android:textSize="30sp"/>
+        android:background="@android:color/white">
 
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@color/background">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <com.zthx.npj.view.MyExpandableListView
+                        android:id="@+id/fg_shopping_elv"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="猜你喜欢"
+                        android:textSize="@dimen/sp_16"
+                        android:textColor="@color/text3"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/dp_13"/>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/fg_shopping_rv_like"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/dp_13"/>
+                </LinearLayout>
+            </ScrollView>
+
+            <!--分割线-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/background" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/fg_shopping_cb_all_check"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_weight="0.4"
+                    android:background="@null"
+                    android:button="@null"
+                    android:clickable="true"
+                    android:drawableLeft="@drawable/checkbox_bg"
+                    android:drawablePadding="@dimen/dp_15"
+                    android:text="全选"
+                    android:textSize="@dimen/sp_15" />
+
+                <LinearLayout
+                    android:id="@+id/order_info"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.6"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="不含运费"
+                            android:textColor="@color/text9"
+                            android:textSize="@dimen/sp_12" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/dp_5"
+                            android:text="合计: "
+                            android:textColor="@color/text6"
+                            android:textSize="@dimen/sp_15" />
+
+                        <TextView
+                            android:id="@+id/fg_shopping_tv_total_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0.00"
+                            android:textColor="@color/app_theme"
+                            android:textSize="@dimen/sp_15" />
+
+                        <TextView
+                            android:id="@+id/fg_shopping_tv_go_pay"
+                            android:layout_width="@dimen/dp_55"
+                            android:layout_height="@dimen/dp_25"
+                            android:layout_marginLeft="@dimen/dp_11"
+                            android:background="@color/app_theme"
+                            android:gravity="center"
+                            android:text="结算: 3"
+                            android:textColor="@android:color/white"
+                            android:textSize="11sp" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <!--<LinearLayout-->
+                <!--android:visibility="gone"-->
+                <!--android:gravity="center"-->
+                <!--android:id="@+id/share_info"-->
+                <!--android:layout_weight="0.7"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent">-->
+                <!--<TextView-->
+                <!--android:id="@+id/share_goods"-->
+                <!--android:textSize="16sp"-->
+                <!--android:textColor="@android:color/white"-->
+                <!--android:background="@color/ic_yellow"-->
+                <!--android:gravity="center"-->
+                <!--android:text="分享宝贝"-->
+                <!--android:layout_weight="0.3"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent" />-->
+                <!--<TextView-->
+                <!--android:id="@+id/collect_goods"-->
+                <!--android:textSize="16sp"-->
+                <!--android:textColor="@android:color/white"-->
+                <!--android:gravity="center"-->
+                <!--android:text="移到收藏夹"-->
+                <!--android:layout_weight="0.3"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent" />-->
+                <!--<TextView-->
+                <!--android:id="@+id/del_goods"-->
+                <!--android:textSize="16sp"-->
+                <!--android:textColor="@android:color/white"-->
+                <!--android:gravity="center"-->
+                <!--android:text="删除"-->
+                <!--android:layout_weight="0.3"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent" />-->
+                <!--</LinearLayout>-->
+            </LinearLayout>
+        </LinearLayout>
+    </FrameLayout>
+
+
+</LinearLayout>
