--- a/app/src/main/res/layout/activity_classfiy.xml
+++ b/app/src/main/res/layout/activity_classfiy.xml
@@ -1,8 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_47"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/at_classfiy_iv_back"
+            android:layout_width="@dimen/dp_22"
+            android:layout_height="@dimen/dp_22"
+            android:src="@drawable/back"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dp_5"/>
+        <EditText
+            android:id="@+id/at_classfiy_et_search"
+            android:layout_width="@dimen/dp_245"
+            android:layout_height="@dimen/dp_29"
+            android:layout_centerVertical="true"
+            android:background="@drawable/gray_conner"
+            android:layout_toRightOf="@id/at_classfiy_iv_back"
+            android:layout_marginLeft="@dimen/dp_38"
+            android:hint="下单立减20元"
+            android:textSize="@dimen/sp_15"
+            android:paddingLeft="@dimen/dp_37"/>
+        <ImageView
+            android:layout_width="@dimen/dp_22"
+            android:layout_height="@dimen/dp_22"
+            android:src="@drawable/home_search"
+            android:layout_centerVertical="true"
+            android:layout_alignLeft="@id/at_classfiy_et_search"
+            android:layout_marginLeft="@dimen/dp_11"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="取消"
+            android:textColor="@color/text6"
+            android:textSize="@dimen/sp_12"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp_12"/>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,7 +54,7 @@
         android:orientation="horizontal">
 
         <ListView
-            android:id="@+id/lv_menu"
+            android:id="@+id/at_classfiy_lv_menu"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -28,16 +71,16 @@
                 android:layout_height="match_parent">
 
                 <ListView
-                    android:id="@+id/lv_home"
+                    android:id="@+id/at_classfiy_lv_home"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tv_titile"
+                android:id="@+id/at_classfiy_tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
-                android:background="#DCDBDB"
+                android:background="@android:color/white"
                 android:gravity="center_vertical"
                 android:paddingLeft="20dp"
                 android:text="hello_world" />
