--- a/app/src/main/res/layout/item_classfiy_menu.xml
+++ b/app/src/main/res/layout/item_classfiy_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/dp_40"
     android:orientation="vertical" >
     <TextView 
         android:id="@+id/item_name"
@@ -10,7 +10,6 @@
         android:text=""
         android:gravity="center"
         android:textSize="@dimen/sp_14"
-        android:layout_marginTop="@dimen/dp_26"
         android:textColor="@color/app_theme"/>
 
 </LinearLayout>
