--- a/app/src/main/res/layout/popupwindow_goods_size.xml
+++ b/app/src/main/res/layout/popupwindow_goods_size.xml
@@ -54,6 +54,7 @@
             android:layout_below="@id/pop_goods_size_tv_total_num"/>
 
         <TextView
+            android:id="@+id/pop_goods_size_tv_old_price"
             android:layout_width="@dimen/dp_75"
             android:layout_height="@dimen/dp_20"
             android:gravity="center"
@@ -64,6 +65,19 @@
             android:layout_marginLeft="@dimen/dp_10"
             android:textSize="@dimen/sp_12"
             android:textColor="@android:color/white"/>
+
+        <TextView
+            android:id="@+id/pop_goods_size_tv_sec_old_price"
+            android:visibility="gone"
+            android:layout_width="@dimen/dp_75"
+            android:layout_height="@dimen/dp_20"
+            android:gravity="center"
+            android:layout_toRightOf="@id/pop_goods_size_tv_price"
+            android:text="市场价:255"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:textSize="@dimen/sp_12"
+            android:textColor="@color/text9"/>
         
         <ImageView
             android:layout_width="@dimen/dp_22"
