--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.GoodsDetailActivity">
 
     <ScrollView
@@ -23,6 +23,81 @@
                 <com.youth.banner.Banner
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"></com.youth.banner.Banner>
+                
+                <RelativeLayout
+                    android:id="@+id/at_goods_detail_rl_sec_kill"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_40"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/app_theme"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:id="@+id/iv_miaosha_pic"
+                        android:layout_width="@dimen/dp_22"
+                        android:layout_height="@dimen/dp_22"
+                        android:layout_marginLeft="@dimen/dp_12"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/sec_kill_pic"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="正在抢购"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/sp_16"
+                        android:layout_toRightOf="@id/iv_miaosha_pic"
+                        android:layout_marginLeft="@dimen/dp_10"/>
+
+                    <com.zthx.npj.view.TimeTextView
+                        android:id="@+id/at_goods_detail_ttv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/sp_13"
+                        android:textColor="@android:color/white"
+                        android:layout_marginTop="@dimen/dp_6"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/dp_17"
+                        android:text="02:31:18"/>
+
+                    <TextView
+                        android:id="@+id/at_goods_detail_tv_log"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="距结束: "
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/sp_13"
+                        android:layout_alignTop="@id/at_goods_detail_ttv"
+                        android:layout_toLeftOf="@id/at_goods_detail_ttv"
+                        android:layout_marginRight="@dimen/dp_5"/>
+
+                    <com.zthx.npj.view.SaleDetailProgressView
+                        android:id="@+id/at_goods_detail_spv"
+                        android:layout_width="@dimen/dp_100"
+                        android:layout_height="@dimen/dp_10"
+                        android:layout_alignLeft="@id/at_goods_detail_tv_log"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="@dimen/dp_6"
+                        app:nearOverText="即将售罄"
+                        app:overText="已售罄"/>
+
+                </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_40"
+                    android:background="@color/black"
+                    android:alpha="0.45"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/sp_16"
+                        android:textColor="@android:color/white"
+                        android:text="本场秒杀活动已结束"
+                        android:gravity="center_vertical"/>
+                </LinearLayout>
 
                 <ImageView
                     android:layout_width="@dimen/dp_25"
