提交附近商家UI(2)

--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -125,6 +125,7 @@
                </LinearLayout>
 
                <Button
+                   android:id="@+id/at_store_detail_btn_pay"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_alignParentRight="true"
