--- a/app/src/main/res/layout/activity_location_store.xml
+++ b/app/src/main/res/layout/activity_location_store.xml
@@ -29,6 +29,7 @@
             />
 
         <TextView
+            android:id="@+id/at_location_store_tv_ruzhu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
