--- a/app/src/main/res/layout/item_pre_sell.xml
+++ b/app/src/main/res/layout/item_pre_sell.xml
@@ -130,7 +130,7 @@
         android:layout_marginBottom="@dimen/dp_16"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/dp_24"
-        android:background="@drawable/app_theme_conner"
+        android:background="@drawable/theme_conner_5"
         android:text="马上预定"
         android:textColor="@android:color/white"
         android:textSize="@dimen/sp_13"
