--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -385,6 +385,7 @@
                         android:layout_marginTop="@dimen/dp_6"/>
                 </LinearLayout>
                 <LinearLayout
+                    android:id="@+id/fg_mine_ll_my_attestation"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
